# Laboratory_13

./: 1.c  CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/algorithms/gfunc/: gfunc.c  gfunc.h
libs/algorithms/ordered_array/: ordered_array_set.c  ordered_array_set.h
libs/data_structure/: CMakeLists.txt
libs/data_structure/bitset/: bitset.c  bitset.h
